[project]
name = "beancount-importers"
version = "0.1.0"
description = "Beancount importers for Crédit Mutuel and Fortuneo"
authors = [
    {name = "Vincent Rischmann",email = "vincent@rischmann.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beancount (>=3)",
    "beangulp (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
